--- a/Juniper_Setup/clementine_ag_Juniper_setup.ipynb
+++ b/Juniper_Setup/clementine_ag_Juniper_setup.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "L4",
-      "authorship_tag": "ABX9TyMwZPM0G/2MSBZ30gqMrdIV",
+      "authorship_tag": "ABX9TyNr+rMy3KYQdfGA0pLgRlAq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,7 +72,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Once the Jetson Orin Nano is flashed with Jetpack 6.2, use the following commands to set up the ZED X Mini camera."
+        "Once the Jetson Orin Nano is flashed with Jetpack 6.2, use the following commands to set up nomachine."
       ],
       "metadata": {
         "id": "SHjXsZbpZVRm"
@@ -80,9 +80,141 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "cd Downloads"
+      ],
       "metadata": {
         "id": "PMZ-xjSLfAbO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " wget https://www.nomachine.com/free/arm/v8/deb -O nomachine.deb"
+      ],
+      "metadata": {
+        "id": "RroTtqLMVITj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo dpkg -i nomachine.deb"
+      ],
+      "metadata": {
+        "id": "KOVYvT7IVIN5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo systemctl set-default multi-user.target"
+      ],
+      "metadata": {
+        "id": "evEs8KIaVIBy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo /usr/NX/bin/nxserver --restart"
+      ],
+      "metadata": {
+        "id": "lb8ixVgGVsCT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Once nomachine is setup, you can set up the ZED SDK and mono Driver. Download the SDK and driver from the stereolabs website developer page. Do the following commands on the Jetson. Fill in the proper file names."
+      ],
+      "metadata": {
+        "id": "KUB5uzwlV2kR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo apt install libqt5core5a"
+      ],
+      "metadata": {
+        "id": "ydk8xtxgV_dh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo dpkg -i stereolabs-zedx_X.X.X-ZED-LINK-YYYY-L4TZZ.Z_arm64.deb"
+      ],
+      "metadata": {
+        "id": "VUcSGZkzWAO5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo reboot"
+      ],
+      "metadata": {
+        "id": "YNQQ2eotV_2t"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cd Downloads"
+      ],
+      "metadata": {
+        "id": "jlrP-pQ_V_rg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "chmod +x ZED_SDK_Tegra_L4TXX.X_vY.Y.Y.zstd.run"
+      ],
+      "metadata": {
+        "id": "Glhg4EGUWj0v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "./ZED_SDK_Tegra_L4TXX.X_vY.Y.Y.zstd.run"
+      ],
+      "metadata": {
+        "id": "nwalhqM0Wqd6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo reboot"
+      ],
+      "metadata": {
+        "id": "gSc-UPLxWyjO"
       },
       "execution_count": null,
       "outputs": []
