--- a/Juniper_Setup/clementine_ag_Juniper_setup.ipynb
+++ b/Juniper_Setup/clementine_ag_Juniper_setup.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "L4",
-      "authorship_tag": "ABX9TyNr+rMy3KYQdfGA0pLgRlAq",
+      "authorship_tag": "ABX9TyMF7v4lXhr3iSqjgJf22hkh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -129,6 +129,59 @@
       ],
       "metadata": {
         "id": "lb8ixVgGVsCT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To fix chromium, do the following."
+      ],
+      "metadata": {
+        "id": "jAiTZ3CDdd5X"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "snap download snapd --revision=24724"
+      ],
+      "metadata": {
+        "id": "Y2D2JQMidmMB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo snap ack snapd_24724.assert"
+      ],
+      "metadata": {
+        "id": "0FqxCQQ5dmIP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo snap install snapd_24724.snap"
+      ],
+      "metadata": {
+        "id": "2HnsLjbudl_S"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo snap refresh --hold snapd"
+      ],
+      "metadata": {
+        "id": "fzyqBG_Uedau"
       },
       "execution_count": null,
       "outputs": []
