--- a/Juniper_Setup/clementine_ag_Juniper_setup.ipynb
+++ b/Juniper_Setup/clementine_ag_Juniper_setup.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "L4",
-      "authorship_tag": "ABX9TyMF7v4lXhr3iSqjgJf22hkh",
+      "authorship_tag": "ABX9TyO1AXZlNI+BmnLwin+YwKOY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -132,6 +132,118 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "no machine has issues locking to the dummy display port and creates its on virtual display, however this causes an issue. the standrd camera and GPU initialization on a jetson orin nano requires the detection of a monitor. Normally a dummy display port would work, but not if nomachine creates a virtual display. do the following commands and edits to fix this."
+      ],
+      "metadata": {
+        "id": "9Hb4BOpebJP_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo vi /usr/NX/etc/server.cfg"
+      ],
+      "metadata": {
+        "id": "36RFvgbWbiYQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "this opens nomachine config file, press i to enter insert mode. add the following lines anywhere:"
+      ],
+      "metadata": {
+        "id": "HrwxGLf_bukV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "PhysicalDesktopSharing 1\n",
+        "VirtualDesktopSharing 0\n"
+      ],
+      "metadata": {
+        "id": "CHpQ9kjwb2Ee"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "press esc then :wq to save and exit the config file. Next you need to restart nomachine server:"
+      ],
+      "metadata": {
+        "id": "7I5JC_wRb4Ob"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo /usr/NX/bin/nxserver --restart\n"
+      ],
+      "metadata": {
+        "id": "ogZSTallcAag"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "now if you do the following command you should see :0, this means it connected to the physical display, if you see :1001, its the virtual display. Next you can reboot, but to make sure these settings remain and stay functional, i also did the following commands:"
+      ],
+      "metadata": {
+        "id": "RLdB--sjcDlV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo systemctl set-default graphical.target\n"
+      ],
+      "metadata": {
+        "id": "bIDI3QSfcQ5B"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo systemctl enable gdm3\n"
+      ],
+      "metadata": {
+        "id": "nyR8BtGGcdX5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo reboot"
+      ],
+      "metadata": {
+        "id": "JgufgSlncfk-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Everything should work properly after this and any argus errors that come up from trying to initialize the caemra should stop."
+      ],
+      "metadata": {
+        "id": "Vm5zunMFchTp"
+      }
     },
     {
       "cell_type": "markdown",
@@ -268,6 +380,119 @@
       ],
       "metadata": {
         "id": "gSc-UPLxWyjO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Do the following commands to install the ROS2 hmble, make sure to download and install the workspace from my github and extract it in your home directory:"
+      ],
+      "metadata": {
+        "id": "c_u10OMKg-9A"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo apt update\n",
+        "sudo apt install -y curl gnupg lsb-release\n",
+        "sudo curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg\n"
+      ],
+      "metadata": {
+        "id": "MvUF43oahLrG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "echo \"deb [arch=arm64 signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main\" | sudo tee /etc/apt/sources.list.d/ros2.list > /dev/null\n"
+      ],
+      "metadata": {
+        "id": "agEBQUB_hPW9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo apt update\n",
+        "sudo apt install ros-humble-desktop\n"
+      ],
+      "metadata": {
+        "id": "DP_LaTtNhRMD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "source /opt/ros/humble/setup.bash\n"
+      ],
+      "metadata": {
+        "id": "HkT-VvKThixL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "python3 -m pip install flask\n"
+      ],
+      "metadata": {
+        "id": "y5LK5TiphbJ5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cd ~/ros2_humble_ws"
+      ],
+      "metadata": {
+        "id": "pbibupwshd7O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "colcon build"
+      ],
+      "metadata": {
+        "id": "shlktT2ghl0H"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "source install/setup.bash"
+      ],
+      "metadata": {
+        "id": "S77IXopkhndF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ros2 run zed_camera_pkg yolo_node\n",
+        "ros2 run zed_camera_pkg velocity_node\n",
+        "ros2 run zed_camera_pkg stream_node\n"
+      ],
+      "metadata": {
+        "id": "BqsKmwmIhwA1"
       },
       "execution_count": null,
       "outputs": []
