--- a/Juniper_Setup/clementine_ag_Juniper_setup.ipynb
+++ b/Juniper_Setup/clementine_ag_Juniper_setup.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "L4",
-      "authorship_tag": "ABX9TyO1AXZlNI+BmnLwin+YwKOY",
+      "authorship_tag": "ABX9TyM0FMtWwhd/5+pnWhrGG08R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -425,6 +425,17 @@
       ],
       "metadata": {
         "id": "DP_LaTtNhRMD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sudo apt install python3-colcon-common-extensions python3-rosdep python3-rosinstall-generator python3-vcstool build-essential\n"
+      ],
+      "metadata": {
+        "id": "sAkjMN6kouG8"
       },
       "execution_count": null,
       "outputs": []
